[project]
name = "landed_cost"
authors = [
    { name = "alaalsalam", email = "alaalsalam101@gmail.com"}
]
description = "Added advantages to charging landed cose to suppliers, creating an invoice for purchases of landed cose, and the possibility of paying the landed cost from a mode of payment ."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
